--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Gallery</title>
-    </head>
-    <body>
-        <div id="root"></div>
-        <script type="module" src="/src/main.tsx"></script>
-    </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Prepix</title>
+  <style>
+    /* Empêcher le flash de fond blanc au chargement */
+    html {
+      background-color: rgb(243, 244, 246);
+    }
+    html.dark {
+      background-color: rgb(17, 24, 39);
+    }
+  </style>
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
